Test cleanup: ExtraTest renames, comment/javadoc sweep, formatter inline
Test files: 27 *ExtraTest / *ExtraCoverageTest renamed by behavior
(AppConfigVectorStoreInitTest, IngestionControllerUploadValidationTest,
PromptControllerValidationTest, ChatHistoryCompactionServiceTriggersTest,
PersistentChatMemoryBackendTogglesTest, PersistentChatMemoryMessageMappingTest,
AscendChatServiceSourceAttachmentsTest, ChatContextAssemblerMemoryFilteringTest,
ChatExecutorBranchCoverageTest, ChatModelResolverProviderRegistrationTest,
RagRetrievalServiceMetadataFallbacksTest, ManualIngestionServiceS3PaginationTest,
VisionCapabilityResolverGlobMatchingTest, AnthropicPromptCacheStrategyNullSafetyTest,
OpenAiPromptCacheStrategyNullSafetyTest, DocumentRouterFileTypeRoutingTest,
IngestionServiceTitleExtractionTest, TitleExtractionVisitorHeadingTraversalTest,
DoclingClientResponseParsingTest, PaddleOcrClientResponseParsingTest,
SemanticMemoryClientBlankUserIdTest, SemanticMemoryClientErrorHandlingTest,
SemanticMemoryExtractorJsonParsingTest, SemanticMemoryExtractorUnbalancedBracketsTest,
S3PresignedUrlServicePresignBranchesTest, IngestionSecurityFilenameEdgeCasesTest,
GlobalExceptionHandlerGenericPathsTest).
SmallGapsTest split into AssembledSystemMessagesTest +
merged into existing main test classes per class under test.

Sweeps: 73 // ---- divider comment lines deleted; 28 // when / then markers
collapsed to // then; 4 .get(0) → .getFirst(); 17 "user1" → TestConstants.DEFAULT_USER_ID;
75 missing @DisplayName auto-inserted and then humanised
(processDocument_WhenFileIsNull_ThenReturnsEmptyString
-> "process document returns empty string when file is null").
20 ByteArrayInputStream sites wrapped in try-with-resources (resource suppress removed).

Main: SecurityConfig refactored to inject SecurityProperties (@ConfigurationProperties).
NoopPromptCacheStrategy -> record. ChatHistoryCompactionService.contextWindow uses
Objects.requireNonNullElse. Main-source javadoc trim: restating @param/@retu