@@ -27,17 +27,9 @@ import java.util.List;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.when;
 
-/**
- * Extra branch coverage for PersistentChatMemory:
- *  - both backends disabled -> empty list
- *  - redis disabled, postgres enabled -> loads from postgres only (no redis cache populate when no items)
- *  - system role message deserialization
- *  - unknown role falls back to UserMessage
- *  - effectiveCacheSize when compaction is enabled
- */
 @ExtendWith(MockitoExtension.class)
 @MockitoSettings(strictness = Strictness.LENIENT)
-class PersistentChatMemoryExtraCoverageTest {
+class PersistentChatMemoryBackendTogglesTest {
 
     private static final String CONV_ID = "convo-extra";
     private static final String REDIS_KEY = "chat:convo-extra";
@@ -71,45 +63,49 @@ class PersistentChatMemoryExtraCoverageTest {
                 properties, compactionProperties, compactionService);
     }
 
-    // ------------------------------------------------------------------ both backends disabled
 
     @Test
     @DisplayName("get returns empty list when both Redis and Postgres are disabled")
     void get_BothBackendsDisabled_ReturnsEmpty() {
+        // given
         properties.getRedis().setEnabled(false);
         properties.getPostgres().setEnabled(false);
         recreateMemory();
 
+        // when
         List<Message> result = memory.get(CONV_ID, 10);
 
+        // then
         assertThat(result).isEmpty();
     }
 
     @Test
     @DisplayName("add does nothing when both Redis and Postgres are disabled")
     void add_BothBackendsDisabled_DoesNothing() {
+        // given
         properties.getRedis().setEnabled(false);
         properties.getPostgres().setEnabled(false);
         recreateMemory();
 
-        // must not throw
+        // then
         memory.add(CONV_ID, List.of(new UserMessage("hello")));
     }
 
-    // ------------------------------------------------------------------ redis disabled, postgres enabled
 
     @Test
     @DisplayName("get loads from Postgres only when Redis is disabled")
     void get_RedisDisabledPostgresEnabled_LoadsFromPostgresOnly() {
+        // given
         properties.getRedis().setEnabled(false);
         properties.getPostgres().setEnabled(true);
         recreateMemory();
-
         ChatHistory row = new ChatHistory(1L, CONV_ID, "user", "Hello from DB", LocalDateTime.now());
         when(repository.findRecentHistory(CONV_ID, 5)).thenReturn(List.of(row));
 
+        // when
         List<Message> result = memory.get(CONV_ID, 10);
 
+        // then
         assertThat(result).hasSize(1);
         assertThat(result.getFirst().getText()).isEqualTo("Hello from DB");
     }
@@ -117,28 +113,32 @@ class PersistentChatMemoryExtraCoverageTest {
     @Test
     @DisplayName("get returns empty list when Redis is disabled and Postgres returns nothing")
     void get_RedisDisabledPostgresEmpty_ReturnsEmpty() {
+        // given
         properties.getRedis().setEnabled(false);
         properties.getPostgres().setEnabled(true);
         recreateMemory();
-
         when(repository.findRecentHistory(CONV_ID, 5)).thenReturn(Collections.emptyList());
 
+        // when
         List<Message> result = memory.get(CONV_ID, 10);
 
+        // then
         assertThat(result).isEmpty();
     }
 
-    // ------------------------------------------------------------------ message role mapping
 
     @Test
     @DisplayName("get maps 'system' role from Redis to SystemMessage")
     void get_SystemRoleFromRedis_MapsToSystemMessage() {
+        // given
         when(redisTemplate.opsForList()).thenReturn(listOperations);
         when(listOperations.range(REDIS_KEY, 0, -1))
                 .thenReturn(List.of("{\"role\":\"system\",\"content\":\"You are a helpful assistant.\"}"));
 
+        // when
         List<Message> result = memory.get(CONV_ID, 10);
 
+        // then
         assertThat(result).hasSize(1);
         assertThat(result.getFirst()).isInstanceOf(SystemMessage.class);
     }
@@ -146,12 +146,15 @@ class PersistentChatMemoryExtraCoverageTest {
     @Test
     @DisplayName("get maps 'assistant' role from Redis to AssistantMessage")
     void get_AssistantRoleFromRedis_MapsToAssistantMessage() {
+        // given
         when(redisTemplate.opsForList()).thenReturn(listOperations);
         when(listOperations.range(REDIS_KEY, 0, -1))
                 .thenReturn(List.of("{\"role\":\"assistant\",\"content\":\"Hello!\"}"));
 
+        // when
         List<Message> result = memory.get(CONV_ID, 10);
 
+        // then
         assertThat(result).hasSize(1);
         assertThat(result.getFirst()).isInstanceOf(AssistantMessage.class);
     }
@@ -159,35 +162,38 @@ class PersistentChatMemoryExtraCoverageTest {
     @Test
     @DisplayName("get maps unknown role from Redis to UserMessage (fallback)")
     void get_UnknownRoleFromRedis_FallsBackToUserMessage() {
+        // given
         when(redisTemplate.opsForList()).thenReturn(listOperations);
         when(listOperations.range(REDIS_KEY, 0, -1))
                 .thenReturn(List.of("{\"role\":\"unknown_role\",\"content\":\"Strange message.\"}"));
 
+        // when
         List<Message> result = memory.get(CONV_ID, 10);
 
+        // then
         assertThat(result).hasSize(1);
         assertThat(result.getFirst()).isInstanceOf(UserMessage.class);
     }
 
-    // ------------------------------------------------------------------ effectiveCacheSize with compaction enabled
 
     @Test
     @DisplayName("add trims Redis cache to keepRecentTurns+1 when compaction is enabled and keepRecentTurns > maxSize")
     void add_CompactionEnabledWithLargeKeepRecent_TrimsToCompactionSize() {
+        // given
         compactionProperties.setEnabled(true);
         compactionProperties.setKeepRecentTurns(10); // > maxSize(5) -> effectiveCacheSize = 11
         properties.setMaxSize(5);
         recreateMemory();
-
         when(redisTemplate.opsForList()).thenReturn(listOperations);
 
-        // just verify it doesn't throw; actual trim size is exercised internally
+        // then
         memory.add(CONV_ID, List.of(new UserMessage("message")));
     }
 
     @Test
     @DisplayName("get slices to lastN when Redis has more messages than requested")
     void get_MoreMessagesThanLastN_SlicesToLastN() {
+        // given
         when(redisTemplate.opsForList()).thenReturn(listOperations);
         when(listOperations.range(REDIS_KEY, 0, -1)).thenReturn(List.of(
                 "{\"role\":\"user\",\"content\":\"msg1\"}",
@@ -197,65 +203,71 @@ class PersistentChatMemoryExtraCoverageTest {
                 "{\"role\":\"user\",\"content\":\"msg5\"}"
         ));
 
-        // Request only last 2
+        // when — request only last 2
         List<Message> result = memory.get(CONV_ID, 2);
 
+        // then
         assertThat(result).hasSize(2);
-        assertThat(result.get(0).getText()).isEqualTo("msg4");
+        assertThat(result.getFirst().getText()).isEqualTo("msg4");
         assertThat(result.get(1).getText()).isEqualTo("msg5");
     }
 
-    // ------------------------------------------------------------------ logToggleState (@PostConstruct)
 
     @Test
     @DisplayName("logToggleState logs Enabled/Enabled when both backends are on and compaction is on")
     void logToggleState_BothEnabledAndCompactionEnabled_LogsEnabled() {
+        // given
         properties.getRedis().setEnabled(true);
         properties.getPostgres().setEnabled(true);
         compactionProperties.setEnabled(true);
         recreateMemory();
 
-        // must not throw
+        // then
         memory.logToggleState();
     }
 
     @Test
     @DisplayName("logToggleState logs Disabled for Redis when Redis is disabled")
     void logToggleState_RedisDisabled_LogsRedisDisabled() {
+        // given
         properties.getRedis().setEnabled(false);
         properties.getPostgres().setEnabled(true);
         compactionProperties.setEnabled(false);
         recreateMemory();
 
+        // then
         memory.logToggleState();
     }
 
     @Test
     @DisplayName("logToggleState logs Disabled for Postgres when Postgres is disabled")
     void logToggleState_PostgresDisabled_LogsPostgresDisabled() {
+        // given
         properties.getRedis().setEnabled(true);
         properties.getPostgres().setEnabled(false);
         compactionProperties.setEnabled(true);
         recreateMemory();
 
+        // then
         memory.logToggleState();
     }
 
-    // ------------------------------------------------------------------ loadFromRedis with null list
 
     @Test
     @DisplayName("get returns empty list when Redis opsForList.range returns null")
     void get_RedisRangeReturnsNull_LoadsFromPostgres() {
+        // given
         when(redisTemplate.opsForList()).thenReturn(listOperations);
         when(listOperations.range(REDIS_KEY, 0, -1)).thenReturn(null);
         when(repository.findRecentHistory(CONV_ID, 5)).thenReturn(List.of());
 
+        // when
         List<Message> result = memory.get(CONV_ID, 10);
 
+        // then
         assertThat(result).isEmpty();
     }
 
-    // ------------------------------------------------------------------ helpers
 
     private void recreateMemory() {
         memory = new PersistentChatMemory(repository, redisTemplate, new ObjectMapper(),
