@@ -61,16 +61,19 @@ class PersistentChatMemoryTest {
     @Test
     @DisplayName("returns messages from Redis cache when cache is populated")
     void get_WhenInRedis_ThenReturnsFromRedisAndIgnoresDB() {
+        // given
         when(redisTemplate.opsForList()).thenReturn(listOperations);
         when(listOperations.range(REDIS_KEY, 0, -1)).thenReturn(List.of(
                 "{\"role\":\"user\",\"content\":\"Hello\"}",
                 "{\"role\":\"assistant\",\"content\":\"Hi there\"}"));
 
+        // when
         List<Message> result = persistentChatMemory.get(DEFAULT_CONVERSATION_ID, 10);
 
+        // then
         assertThat(result).hasSize(2);
-        assertThat(result.get(0)).isInstanceOf(UserMessage.class);
-        assertThat(result.get(0).getText()).isEqualTo("Hello");
+        assertThat(result.getFirst()).isInstanceOf(UserMessage.class);
+        assertThat(result.getFirst().getText()).isEqualTo("Hello");
         assertThat(result.get(1)).isInstanceOf(AssistantMessage.class);
         assertThat(result.get(1).getText()).isEqualTo("Hi there");
     }
@@ -78,27 +81,31 @@ class PersistentChatMemoryTest {
     @Test
     @DisplayName("fetches from Postgres and caches to Redis when Redis cache is empty")
     void get_WhenNotInRedis_ThenReturnsFromPostgresAndCachesToRedis() {
+        // given
         when(redisTemplate.opsForList()).thenReturn(listOperations);
         when(listOperations.range(REDIS_KEY, 0, -1)).thenReturn(List.of());
-
         ChatHistory historyRow = new ChatHistory(1L, DEFAULT_CONVERSATION_ID, "user", "DB Hello", LocalDateTime.now());
         when(repository.findRecentHistory(DEFAULT_CONVERSATION_ID, 5)).thenReturn(List.of(historyRow));
 
+        // when
         List<Message> result = persistentChatMemory.get(DEFAULT_CONVERSATION_ID, 10);
 
+        // then
         assertThat(result).hasSize(1);
         assertThat(result.getFirst().getText()).isEqualTo("DB Hello");
-
         verify(listOperations).rightPushAll(eq(REDIS_KEY), eq(List.of("{\"role\":\"user\",\"content\":\"DB Hello\"}")));
     }
 
     @Test
     @DisplayName("add pushes message to Redis and persists to database")
     void add_WhenInvoked_ThenPushesToRedisAndPersistsToDBAsync() {
+        // given
         when(redisTemplate.opsForList()).thenReturn(listOperations);
 
+        // when
         persistentChatMemory.add(DEFAULT_CONVERSATION_ID, List.of(new UserMessage("Save me")));
 
+        // then
         verify(listOperations).rightPush(REDIS_KEY, "{\"role\":\"user\",\"content\":\"Save me\"}");
         verify(listOperations).trim(REDIS_KEY, 0, 4);
         verify(repository).save(any(ChatHistory.class));
@@ -107,9 +114,11 @@ class PersistentChatMemoryTest {
     @Test
     @DisplayName("wraps Redis exception in ServiceException when get throws")
     void get_WhenThrowsException_ThenWrapsInServiceException() {
+        // given
         when(redisTemplate.opsForList()).thenReturn(listOperations);
         when(listOperations.range(anyString(), eq(0L), eq(-1L))).thenThrow(new RuntimeException("Redis timeout"));
 
+        // then
         assertThatThrownBy(() -> persistentChatMemory.get(DEFAULT_CONVERSATION_ID))
                 .isInstanceOf(ServiceException.class)
                 .hasMessageContaining("Failed to retrieve chat memory");
@@ -118,8 +127,10 @@ class PersistentChatMemoryTest {
     @Test
     @DisplayName("clear deletes the conversation's Redis key")
     void clear_WhenInvoked_ThenDeletesRedisKey() {
+        // when
         persistentChatMemory.clear(DEFAULT_CONVERSATION_ID);
 
+        // then
         verify(redisTemplate).delete(REDIS_KEY);
     }
 }
