@@ -18,7 +18,7 @@ import software.amazon.awssdk.services.s3.presigner.model.GetObjectPresignReques
 import software.amazon.awssdk.services.s3.presigner.model.PresignedGetObjectRequest;
 
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.time.Duration;
 import java.util.List;
 import java.util.concurrent.Executors;
@@ -28,17 +28,9 @@ import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
-/**
- * Extra branch coverage for S3PresignedUrlService:
- *  - presignAll when refs are null
- *  - presignAll when source attachments are disabled
- *  - presignAll when HEAD object fails (returns Optional.empty)
- *  - presignAll when object size exceeds maxFileSize
- *  - presignAll when source has a non-null mimeType in SourceRef (uses it instead of HEAD)
- */
 @ExtendWith(MockitoExtension.class)
 @MockitoSettings(strictness = Strictness.LENIENT)
-class S3PresignedUrlServiceExtraTest {
+class S3PresignedUrlServicePresignBranchesTest {
 
     @Mock
     private S3Presigner presigner;
@@ -67,69 +59,71 @@ class S3PresignedUrlServiceExtraTest {
     @Test
     @DisplayName("presignAll returns empty list when refs is null")
     void presignAll_NullRefs_ReturnsEmpty() {
+        // then
         assertThat(service.presignAll(null)).isEmpty();
     }
 
     @Test
     @DisplayName("presignAll returns empty list when refs is empty")
     void presignAll_EmptyRefs_ReturnsEmpty() {
+        // then
         assertThat(service.presignAll(List.of())).isEmpty();
     }
 
     @Test
     @DisplayName("presignAll returns empty list when source attachments are disabled")
     void presignAll_AttachmentsDisabled_ReturnsEmpty() {
+        // given
         RagProperties.SourceAttachments sa = mock(RagProperties.SourceAttachments.class);
         when(sa.isEnabled()).thenReturn(false);
         when(ragProperties.getSourceAttachments()).thenReturn(sa);
 
-        SourceRef ref = new SourceRef("bucket", "key.pdf", "key.pdf", null);
-        assertThat(service.presignAll(List.of(ref))).isEmpty();
+        // then
+        assertThat(service.presignAll(List.of(new SourceRef("bucket", "key.pdf", "key.pdf", null)))).isEmpty();
     }
 
     @Test
     @DisplayName("presignAll skips a ref when HEAD object request fails")
     void presignAll_HeadObjectFails_SkipsRef() {
+        // given
         when(s3Client.headObject(any(HeadObjectRequest.class)))
                 .thenThrow(new RuntimeException("S3 unavailable"));
 
-        SourceRef ref = new SourceRef("bucket", "key.pdf", "key.pdf", null);
-        List<SourceFile> results = service.presignAll(List.of(ref));
+        // when
+        List<SourceFile> results = service.presignAll(List.of(new SourceRef("bucket", "key.pdf", "key.pdf", null)));
 
+        // then
         assertThat(results).isEmpty();
     }
 
     @Test
     @DisplayName("presignAll skips a ref when file size exceeds max file size")
     void presignAll_FileSizeExceedsMax_SkipsRef() {
-        HeadObjectResponse head = HeadObjectResponse.builder()
-                .contentLength(100L * 1024 * 1024) // 100MB > 10MB limit
-                .contentType("application/pdf")
-                .build();
-        when(s3Client.headObject(any(HeadObjectRequest.class))).thenReturn(head);
+        // given
+        when(s3Client.headObject(any(HeadObjectRequest.class))).thenReturn(
+                HeadObjectResponse.builder().contentLength(100L * 1024 * 1024).contentType("application/pdf").build());
 
-        SourceRef ref = new SourceRef("bucket", "big.pdf", "big.pdf", null);
-        List<SourceFile> results = service.presignAll(List.of(ref));
+        // when
+        List<SourceFile> results = service.presignAll(List.of(new SourceRef("bucket", "big.pdf", "big.pdf", null)));
 
+        // then
         assertThat(results).isEmpty();
     }
 
     @Test
     @DisplayName("presignAll returns presigned URL when HEAD succeeds and size is within limit")
     void presignAll_ValidRef_ReturnsSigned() throws MalformedURLException {
-        HeadObjectResponse head = HeadObjectResponse.builder()
-                .contentLength(1024L)
-                .contentType("application/pdf")
-                .build();
-        when(s3Client.headObject(any(HeadObjectRequest.class))).thenReturn(head);
-
+        // given
+        when(s3Client.headObject(any(HeadObjectRequest.class))).thenReturn(
+                HeadObjectResponse.builder().contentLength(1024L).contentType("application/pdf").build());
         PresignedGetObjectRequest presigned = mock(PresignedGetObjectRequest.class);
-        when(presigned.url()).thenReturn(new URL("https://example.com/key.pdf?sig=abc"));
+        when(presigned.url()).thenReturn(URI.create("https://example.com/key.pdf?sig=abc").toURL());
         when(presigner.presignGetObject(any(GetObjectPresignRequest.class))).thenReturn(presigned);
 
-        SourceRef ref = new SourceRef("bucket", "key.pdf", "key.pdf", null);
-        List<SourceFile> results = service.presignAll(List.of(ref));
+        // when
+        List<SourceFile> results = service.presignAll(List.of(new SourceRef("bucket", "key.pdf", "key.pdf", null)));
 
+        // then
         assertThat(results).hasSize(1);
         assertThat(results.getFirst().downloadUrl()).contains("key.pdf");
     }
@@ -137,39 +131,34 @@ class S3PresignedUrlServiceExtraTest {
     @Test
     @DisplayName("presignAll includes source when contentLength is null (size check skipped)")
     void presignAll_NullContentLength_SizeCheckSkipped() throws MalformedURLException {
-        // contentLength() returns null -> sizeBytes != null && sizeBytes > max is false -> no skip
-        HeadObjectResponse head = HeadObjectResponse.builder()
-                .contentLength(null)
-                .contentType("application/pdf")
-                .build();
-        when(s3Client.headObject(any(HeadObjectRequest.class))).thenReturn(head);
-
+        // given — contentLength() returns null -> sizeBytes != null && sizeBytes > max is false -> no skip
+        when(s3Client.headObject(any(HeadObjectRequest.class))).thenReturn(
+                HeadObjectResponse.builder().contentLength(null).contentType("application/pdf").build());
         PresignedGetObjectRequest presigned = mock(PresignedGetObjectRequest.class);
-        when(presigned.url()).thenReturn(new URL("https://example.com/key.pdf?sig=abc"));
+        when(presigned.url()).thenReturn(URI.create("https://example.com/key.pdf?sig=abc").toURL());
         when(presigner.presignGetObject(any(GetObjectPresignRequest.class))).thenReturn(presigned);
 
-        SourceRef ref = new SourceRef("bucket", "key.pdf", "key.pdf", null);
-        List<SourceFile> results = service.presignAll(List.of(ref));
+        // when
+        List<SourceFile> results = service.presignAll(List.of(new SourceRef("bucket", "key.pdf", "key.pdf", null)));
 
+        // then
         assertThat(results).hasSize(1);
     }
 
     @Test
     @DisplayName("presignAll uses SourceRef mimeType when it is present instead of HEAD response contentType")
     void presignAll_RefHasMimeType_UsesRefMimeType() throws MalformedURLException {
-        HeadObjectResponse head = HeadObjectResponse.builder()
-                .contentLength(512L)
-                .contentType("application/octet-stream") // would be overridden
-                .build();
-        when(s3Client.headObject(any(HeadObjectRequest.class))).thenReturn(head);
-
+        // given
+        when(s3Client.headObject(any(HeadObjectRequest.class))).thenReturn(
+                HeadObjectResponse.builder().contentLength(512L).contentType("application/octet-stream").build());
         PresignedGetObjectRequest presigned = mock(PresignedGetObjectRequest.class);
-        when(presigned.url()).thenReturn(new URL("https://example.com/img.png?sig=abc"));
+        when(presigned.url()).thenReturn(URI.create("https://example.com/img.png?sig=abc").toURL());
         when(presigner.presignGetObject(any(GetObjectPresignRequest.class))).thenReturn(presigned);
 
-        SourceRef ref = new SourceRef("bucket", "img.png", "img.png", "image/png");
-        List<SourceFile> results = service.presignAll(List.of(ref));
+        // when
+        List<SourceFile> results = service.presignAll(List.of(new SourceRef("bucket", "img.png", "img.png", "image/png")));
 
+        // then
         assertThat(results).hasSize(1);
         assertThat(results.getFirst().mimeType()).isEqualTo("image/png");
     }
